from enum import IntEnum


class Player(IntEnum):
    X = 1
    O = 2
