class Human:
    def __init__(self) -> None:
        pass
